Wallet icons Added and UI fixes

--- a/app/src/main/res/layout/wallet_add_money_visa.xml
+++ b/app/src/main/res/layout/wallet_add_money_visa.xml
@@ -78,7 +78,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.9"
-                    android:src="@drawable/moneytransfer" />
+                    android:src="@drawable/wallet_transfer" />
 
                 <TextView
                     android:layout_width="match_parent"
