Home fragment Ui design implemented

--- a/app/src/main/res/layout/activity_main_dashboard.xml
+++ b/app/src/main/res/layout/activity_main_dashboard.xml
@@ -21,6 +21,7 @@
         android:layout_alignParentBottom="true"
         android:background="@color/gray"
         app:labelVisibilityMode="auto"
+        app:itemIconTint="@color/transparent"
         app:menu="@menu/bottom_navigation_menu" />
 
 </RelativeLayout>
