--- a/app/src/main/res/layout/content_farm_records_dashboard.xml
+++ b/app/src/main/res/layout/content_farm_records_dashboard.xml
@@ -20,7 +20,7 @@
                 android:id="@+id/mainView"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:background="#344834"
+                android:background="@color/colorPrimary"
                 android:theme="@style/AppTheme.AppBarOverlay">
 
                 <androidx.appcompat.widget.Toolbar
