--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -4,6 +4,9 @@
     <style name="DialogFullscreen" parent="@android:style/Theme.Material.Light.DialogWhenLarge">
         <item name="android:windowAnimationStyle">@style/DialogAnimation</item>
         <item name="android:windowNoTitle">true</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
         <item name="android:statusBarColor">?attr/colorPrimaryDark</item>
     </style>
+
+
 </resources>
