--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,14 +6,12 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="actionMenuTextAppearance">@style/MyMenuTextAppearance</item>
-        <item name="android:typeface">serif</item>
-        <!--<item name="android:typeface">@font/source_sans_pro_regular</item>-->
-
-        <!--<item name="android:popupMenuStyle">@style/AppTheme.Popup</item>-->
+        <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
 
     <style name="mySpinnerItemStyle" parent="@android:style/Widget.Holo.DropDownItem.Spinner">
         <item name="android:textColor">#34463F</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
 
 
@@ -29,6 +27,7 @@
         <item name="android:button">@layout/activity_crop_field_manager</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
 
     </style>
 
@@ -39,12 +38,14 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="actionMenuTextAppearance">@style/MyMenuTextAppearance</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
 
 
     <style name="Button" parent="Base.TextAppearance.AppCompat.Button">
         <item name="backgroundTint">@color/buttonColor</item>
         <item name="android:layout_marginBottom">2dp</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
     <style name="CropButton" parent="Base.TextAppearance.AppCompat.Button">
 
@@ -63,10 +64,12 @@
 
     <style name="generalnotitle" parent="@android:style/Theme.Black.NoTitleBar.Fullscreen">
         <item name="android:windowNoTitle">true</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
 
     <style name="progressDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
 
 
@@ -74,6 +77,7 @@
         <item name="android:minWidth">0dip</item>
         <item name="android:paddingLeft">0dip</item>
         <item name="android:paddingRight">0dip</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
 
     <style name="MyPopupMenu" parent="Widget.AppCompat.PopupMenu">
@@ -84,15 +88,17 @@
 
 
     <style name="MyToolbar" parent="AppTheme">
-        <item name="android:background">@color/colorAccentGreen</item>
+        <item name="android:background">@color/colorPrimary</item>
         <item name="android:textColorPrimary">@color/white</item>
         <item name="android:textColorSecondary">@color/white</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
 
     <style name="MyToolbarWallet" parent="AppTheme">
         <item name="android:background">@color/white</item>
         <item name="android:textColorPrimary">@color/colorAccentGreen</item>
         <item name="android:textColorSecondary">@color/colorAccentGreen</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
 
     <style name="MyToolbarPopUp" parent="AppTheme">
@@ -111,11 +117,13 @@
 
     <style name="MyCustomTabLayout" parent="Widget.Design.TabLayout">
         <item name="tabTextAppearance">@style/MyTabTextAppearance</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
 
     <style name="MyTabTextAppearance" parent="TextAppearance.Design.Tab">
         <item name="textAllCaps">false</item>
         <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
 
     <style name="HeaderTheme" parent="AppTheme">
@@ -134,6 +142,7 @@
     <!-- Style for an Preference Entry -->
     <style name="AppPreference" parent="@style/Preference.Material">
         <item name="android:layout">@layout/preference_material</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
 
     <!--Youtube List Style-->
@@ -145,6 +154,7 @@
     <style name="DialogFullscreen" parent="@android:style/Theme.Material.Light.DialogWhenLarge" >
         <item name="android:windowAnimationStyle">@style/DialogAnimation</item>
         <item name="android:windowNoTitle">true</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
         <item name="android:statusBarColor">?attr/colorPrimaryDark</item>
     </style>
 
@@ -171,33 +181,27 @@
         <item name="android:textColorSecondary">@color/black</item>
     </style>
 
-    <style name="AppTheme.flock1" parent="AppTheme">
-        <item name="colorPrimary">@color/colorPrimary_birds</item>
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" >
+        <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
 
-    <style name="AppTheme.birds" parent="AppTheme.NoActionBar">
-        <item name="colorPrimary">@color/colorPrimary_birds</item>
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" >
+        <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
 
-    <style name="Button_2" parent="Base.TextAppearance.AppCompat.Button">
-        <item name="backgroundTint">@color/colorPrimary_birds</item>
-    </style>
-    <style name="Button_DW" parent="Base.TextAppearance.AppCompat.Button">
-        <item name="backgroundTint">@color/colorPrimary</item>
-    </style>
-
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="MyMenuTextAppearance" parent="android:TextAppearance.Holo.Widget.ActionBar.Menu">
         <item name="android:textAllCaps">false</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">16sp</item>>
+        <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
+
 
     <style name="spinnerStyle" parent="@android:style/Widget.TextView.SpinnerItem">
         <item name="android:padding">1sp</item>
         <item name="android:layout_margin">1sp</item>
-        <item name="android:textColor">#34463F</item>
+        <item name="android:textColor">#34463F</item>>
+        <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
+
 </resources>
