--- a/app/src/main/res/layout/activity_crop_field_manager.xml
+++ b/app/src/main/res/layout/activity_crop_field_manager.xml
@@ -9,18 +9,37 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-        >
+
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.PopupOverlay" >
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tvtitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="@string/title_add_fields"
+                android:textColor="#fff"
+                android:textSize="18dp" />
 
 
+
+
+
+        </RelativeLayout>
+
+        </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
     <ScrollView
@@ -33,36 +52,27 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="@dimen/dimen_20dp">
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginBottom="10dp">
+            android:layout_marginBottom="10dp"
+            android:padding="@dimen/dimen_10dp">
 
-            <TextView
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:text="@string/field_name"
-                android:textSize="16sp"
-                android:textColor="@color/textColor"
-                />
 
             <EditText
                 android:id="@+id/txt_crop_field_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:ems="10"
-                android:hint="Enter.."
-                android:background="@drawable/input_shapes"
+                android:ems="20"
+                android:hint="Field Name.."
+                android:background="@drawable/rounded_corners_edittext_dark"
                 android:textSize="14sp"
-
-
                 />
 
         </LinearLayout>
@@ -70,23 +80,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginBottom="10dp">
+            android:layout_marginBottom="10dp"
+            android:padding="@dimen/dimen_10dp">
 
-            <TextView
 
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:text="Field Type"
-                android:textSize="16sp"
-                android:textColor="@color/textColor"
-                />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/input_shapes_grey_spinner"
+                android:background="@drawable/input_shapes_grey_spinner">
 
-                >
 
             <Spinner
                 android:id="@+id/sp_crop_field_type"
@@ -102,274 +104,147 @@
             </LinearLayout>
 
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginBottom="10dp">
-
-            <TextView
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:text="Layout Type"
-                android:textSize="16sp"
-                android:textColor="@color/textColor"
-                />
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/input_shapes_grey_spinner"
-
-                >
 
 
-            <Spinner
-                android:id="@+id/sp_crop_field_layout_type"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:hint="Enter.."
-                android:entries="@array/crop_field_layout_type"
-                android:textSize="14sp"
-                />
-            </LinearLayout>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginBottom="10dp">
-
-            <TextView
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:text="Status"
-                android:textSize="16sp"
-                android:textColor="@color/textColor"
-                />
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/input_shapes_grey_spinner"
-
-                >
-
-            <Spinner
-                android:id="@+id/sp_crop_field_status"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:hint="Enter.."
-                android:entries="@array/crop_field_status"
-                android:textSize="14sp"
-                />
-            </LinearLayout>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginBottom="15dp"
-            >
-
-            <TextView
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/soil_category"
-                android:textColor="@color/textColor"
-                android:layout_weight="0.5"
-                android:textSize="16sp" />
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/input_shapes_grey_spinner"
-
-                >
-
-            <Spinner
-                android:id="@+id/sp_crop_field_soil_category"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="14sp"
-                android:layout_weight="0.5"
-                 android:entries="@array/crop_field_soil_category"
-                />
-
-            </LinearLayout>
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginBottom="10dp">
-
-            <TextView
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/soil_type"
-                android:layout_weight="0.6"
-                android:textColor="@color/textColor"
-                android:textSize="16sp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/input_shapes_grey_spinner"
-
-                >
-
-            <Spinner
-
-                android:id="@+id/sp_crop_field_soil_type"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.4"
-                android:textSize="14sp"
-                android:entries="@array/crop_field_soil_type"
-             />
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginBottom="10dp">
-
-            <TextView
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:text="@string/watercourse"
-                android:textColor="@color/textColor"
-                android:textSize="16sp" />
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/input_shapes_grey_spinner"
-
-                >
-
-            <Spinner
-                android:id="@+id/sp_crop_field_watercourse"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:textSize="14sp"
-                android:entries="@array/crop_field_watercourse"
-                />
-            </LinearLayout>
-        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginBottom="10dp">
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-
-               >
-
-            <TextView
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/total_area"
-                android:textColor="@color/textColor"
-                android:textSize="16sp"
-                android:layout_marginRight="5dp"
-                />
-
-            <EditText
-                android:id="@+id/txt_crop_field_total_area"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Enter.."
-                android:inputType="numberDecimal"
-                android:textSize="14sp"
-                android:background="@drawable/input_shapes"
-                android:text="0"
-                android:layout_marginRight="10dp"
-
-                />
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                >
-            <TextView
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/croppable_area"
-                android:textColor="@color/textColor"
-                android:textSize="16sp" />
-
-            <EditText
-                android:id="@+id/txt_crop_field_croppable_area"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Enter.."
-                android:textSize="14sp"
-                android:background="@drawable/input_shapes"
-                android:inputType="numberDecimal"
-                android:text="0"
-                />
-            </LinearLayout>
-
-        </LinearLayout>
+            android:layout_marginBottom="5dp"
+            android:padding="@dimen/dimen_10dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginBottom="10dp">
+            android:layout_weight="1"
+            android:layout_marginRight="12dp">
 
-            <TextView
 
-                android:layout_width="wrap_content"
+
+            <LinearLayout
+                android:background="@drawable/input_shapes_grey_spinner"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/units"
-                android:layout_weight="0.5"
-                android:textColor="@color/textColor"
-                android:textSize="16sp" />
+                android:padding="3.4dp">
+              <Spinner
+                    android:id="@+id/sp_crop_field_status"
+                    android:layout_width="92dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:entries="@array/crop_field_status"
+                    android:hint="Enter.."
+                    android:textSize="14sp"
+                 />
+
+            </LinearLayout>
+        </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/input_shapes_grey_spinner"
+                android:orientation="vertical"
+                android:layout_weight="1"
+                android:layout_marginStart="12dp">
 
-                >
 
-            <Spinner
-                android:id="@+id/sp_crop_field_units"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:entries="@array/crop_field_units"
-                android:inputType="numberDecimal"
-                style="@style/MySpinnerLook"
-              />
+
+                <LinearLayout
+                    android:background="@drawable/input_shapes_grey_spinner"
+                    android:padding="3.4dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <Spinner
+                    android:id="@+id/sp_crop_field_units"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:entries="@array/crop_field_units"
+                    android:inputType="numberDecimal"
+                    style="@style/MySpinnerLook"
+
+                    />
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
+
+
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="@dimen/dimen_10dp">
+
+
+
+
+            <EditText
+                android:id="@+id/txt_crop_field_total_area"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:background="@drawable/input_shapes"
+                android:layout_margin="0dp"
+                android:ems="10"
+                android:hint="Field size"
+                android:inputType="number"
+                android:textSize="14sp"
+                android:layout_weight="0.7"
+               />
+
+                <TextView
+                    android:id="@+id/txt_crops_estimated_revenue_units"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:textSize="14sp"
+                    android:text="Units"
+                    android:gravity="center"
+                    android:layout_weight="0.2"
+                    android:background="@color/colorPrimary"
+                    android:textColor="@color/white"
+
+                    />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="@dimen/dimen_10dp">
+
+
+
+            <EditText
+                android:id="@+id/txt_crop_field_croppable_area"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:background="@drawable/input_shapes"
+                android:layout_margin="0dp"
+                android:ems="10"
+                android:hint="Croppable Area"
+                android:inputType="number"
+                android:textSize="14sp"
+                android:layout_weight="0.7"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:textSize="14sp"
+                    android:text="Units"
+                    android:gravity="center"
+                    android:layout_weight="0.2"
+                    android:background="@color/colorPrimary"
+                    android:textColor="@color/white"/>
+            </LinearLayout>
+
+
+
+
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:padding="@dimen/dimen_10dp">
 
 
 
@@ -379,12 +254,13 @@
             android:id="@+id/btn_save"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/buttonColor"
+            android:backgroundTint="@color/colorPrimary"
             android:drawableTint="#ffffff"
             android:text="Save "
             android:textAllCaps="false"
             android:textColor="#ffffff"
             style="@style/Button"
+            android:background="@drawable/rounded_corners_button"
             />
 
 
