--- a/app/src/main/res/layout/content_crop_records_dashboard.xml
+++ b/app/src/main/res/layout/content_crop_records_dashboard.xml
@@ -84,7 +84,7 @@
 
 
                         <LinearLayout
-
+                            android:id="@+id/layout_field_dashboard_fields"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
