--- a/app/src/main/res/layout/activity_crop_field_manager.xml
+++ b/app/src/main/res/layout/activity_crop_field_manager.xml
@@ -63,17 +63,20 @@
             android:layout_marginBottom="10dp"
             android:padding="@dimen/dimen_10dp">
 
-
-            <EditText
+            <com.myfarmnow.myfarmcrop.utils.layout.OtpEdittext
                 android:id="@+id/txt_crop_field_name"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="20"
-                android:hint="Field Name.."
-                android:background="@drawable/rounded_corners_edittext_dark"
-                android:textSize="14sp"
-                />
+                android:layout_height="50dp"
+                android:layout_marginTop="@dimen/input_field_margin"
+                android:background="@drawable/edittext_corner"
+                android:gravity="start|center_vertical"
+                android:hint="Field Name"
+                android:inputType="text"
+                android:paddingLeft="@dimen/dimen_15sp"
+                android:tag=" "
+                android:textAlignment="viewStart"
+                android:textColor="@color/textColor"
+                android:textColorHint="@color/textColorPrimaryDark" />
 
         </LinearLayout>
         <LinearLayout
