--- a/app/src/main/res/layout/activity_crop_fields_list.xml
+++ b/app/src/main/res/layout/activity_crop_fields_list.xml
@@ -16,7 +16,16 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.PopupOverlay" >
+            <TextView
+                android:id="@+id/tvtitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="@string/label_fields"
+                android:textColor="#fff"
+                android:textSize="18dp" />
+        </androidx.appcompat.widget.Toolbar>
 
 
 
