--- a/app/src/main/res/layout/wallet_content_loan_app_add_amount.xml
+++ b/app/src/main/res/layout/wallet_content_loan_app_add_amount.xml
@@ -8,40 +8,6 @@
     tools:context=".wallet.activities.WalletLoanAppInitiateActivity"
     tools:showIn="@layout/wallet_loan_app_add_amount">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/colorAccentLight"
-        android:orientation="vertical"
-        tools:context=".MainActivity">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:background="@color/colorPrimary">
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginLeft="0dp"
-                android:layout_marginTop="15dp"
-                android:src="@drawable/back_black_24dp" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="60dp"
-                android:layout_marginTop="12dp"
-                android:text="Loans"
-                android:textColor="@color/white"
-                android:textSize="25dp" />
-        </RelativeLayout>
-    </LinearLayout>
-
     <LinearLayout
         android:id="@+id/layout_statement_card"
         android:layout_width="match_parent"
@@ -203,6 +169,38 @@
                         android:entries="@array/loan_durations"
                         android:paddingLeft="@dimen/dimen_15sp"
                         android:textSize="12sp" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/colorAccentLight"
+                        android:orientation="vertical"
+                        tools:context=".MainActivity">
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="60dp"
+                            android:background="@color/colorPrimary">
+
+                            <ImageView
+                                android:id="@+id/imageView"
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"
+                                android:layout_marginStart="10dp"
+                                android:layout_marginLeft="0dp"
+                                android:layout_marginTop="15dp"
+                                android:src="@drawable/back_black_24dp" />
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_marginLeft="60dp"
+                                android:layout_marginTop="12dp"
+                                android:text="Loans"
+                                android:textColor="@color/white"
+                                android:textSize="25dp" />
+                        </RelativeLayout>
+                    </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
 
