--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -39,7 +39,7 @@
     <color name="lite_green">#377f22</color>
     <color name="transparent">#00000000</color>
 
-    <color name="blue_mh">#4cc0ff</color>
+    <color name="blue_mh">#128BDC</color>
     <color name="dark_gray_mh">#868686</color>
     <color name="dark_green">#3d8e27</color>
     <color name="darker_gray">#b2b2b2</color>
